# aptos-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
api/: Cargo.toml  README.md
api/doc/: CHANGELOG.md  README.md  spec.yaml
api/fuzzing/: README.md
api/move-test-package/: Move.toml
api/openapi-spec-generator/: Cargo.toml
api/openapi-spec-generator/src/: fake_context.rs  main.rs
api/src/: accept_type.rs  accounts.rs  basic.rs  bcs_payload.rs  blocks.rs  context.rs  error_converter.rs  events.rs  failpoint.rs  index.rs  log.rs  metrics.rs  page.rs  response.rs  runtime.rs  set_failpoints.rs  state.rs  transactions.rs
api/src/tests/: accounts_test.rs  blocks_test.rs  converter_test.rs  events_test.rs  index_test.rs  invalid_post_request_test.rs  mod.rs  state_test.rs  string_resource_test.rs  transaction_vector_test.rs  transactions_test.rs
api/test-context/: Cargo.toml
api/test-context/src/: test_context.rs
api/types/: Cargo.toml
api/types/src/: account.rs  address.rs  block.rs  convert.rs  derives.rs  error.rs  hash.rs  headers.rs  index.rs  ledger_info.rs  lib.rs  mime_types.rs  move_types.rs  transaction.rs  wrappers.rs
config/: Cargo.toml  README.md
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/src/: generator.rs  keys.rs  network_id.rs  utils.rs
config/src/config/: execution_config.rs  logger_config.rs  mod.rs  network_config.rs  safety_rules_config.rs  secure_backend_config.rs  state_sync_config.rs  storage_config.rs  test_config.rs
consensus/: Cargo.toml  README.md
consensus/consensus-types/: Cargo.toml
consensus/consensus-types/src/: block.rs  block_data.rs  block_retrieval.rs  block_test.rs  block_test_utils.rs  common.rs  executed_block.rs  proposal_msg.rs  quorum_cert.rs  sync_info.rs  timeout_2chain.rs  vote.rs  vote_data.rs  vote_msg.rs  vote_proposal.rs
consensus/safety-rules/: Cargo.toml
consensus/safety-rules/benches/: safety_rules.rs
consensus/safety-rules/src/: consensus_state.rs  counters.rs  error.rs  fuzzing_utils.rs  local_client.rs  logging.rs  persistent_safety_storage.rs  process.rs  remote_service.rs  safety_rules.rs  safety_rules_2chain.rs  safety_rules_manager.rs  serializer.rs  t_safety_rules.rs  test_utils.rs  thread.rs
consensus/src/: commit_notifier.rs  consensus_provider.rs  counters.rs  epoch_manager.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  payload_manager.rs  pending_votes.rs  persistent_liveness_storage.rs  recovery_manager.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  state_computer.rs  state_replication.rs  txn_notifier.rs
consensus/src/block_storage/: block_store.rs  block_store_test.rs  block_tree.rs  mod.rs  sync_manager.rs  tracing.rs
consensus/src/consensusdb/: consensusdb_test.rs  mod.rs
consensus/src/experimental/: buffer.rs  buffer_item.rs  buffer_manager.rs  decoupled_execution_utils.rs  errors.rs  execution_phase.rs  hashable.rs  linkedlist.rs  ordering_state_computer.rs  persisting_phase.rs  pipeline_phase.rs  signing_phase.rs
consensus/src/liveness/: cached_proposer_election.rs  cached_proposer_election_test.rs  leader_reputation.rs  leader_reputation_test.rs  proposal_generator_test.rs  proposer_election.rs  rotating_proposer_test.rs  round_proposer_test.rs  round_state.rs  round_state_test.rs  unequivocal_proposer_election.rs  unequivocal_proposer_election_test.rs
consensus/src/quorum_store/: counters.rs  direct_mempool_quorum_store.rs
consensus/src/test_utils/: mock_payload_manager.rs  mock_state_computer.rs  mock_storage.rs  mod.rs
consensus/src/twins/: basic_twins_test.rs  twins_node.rs
consensus/src/util/: mock_time_service.rs  time_service.rs
crates/bounded-executor/: Cargo.toml
crates/channel/: Cargo.toml
crates/channel/src/: lib.rs  message_queues.rs  message_queues_test.rs  pont_channel.rs  pont_channel_test.rs  test.rs
crates/channel/tests/: many-keys-stress-test.rs
crates/crash-handler/: Cargo.toml
crates/crash-handler/src/: lib.rs
crates/indexer/: Cargo.toml  README.md
crates/indexer/src/: counters.rs  database.rs  lib.rs  runtime.rs
crates/inspection-service/: Cargo.toml
crates/inspection-service/src/: inspection_service.rs  lib.rs
crates/node-resource-metrics/: Cargo.toml
crates/node-resource-metrics/src/: lib.rs
crates/num-variants/: Cargo.toml
crates/pont-build-info/: Cargo.toml
crates/pont-build-info/src/: lib.rs
crates/pont-compression/: Cargo.toml
crates/pont-compression/src/: lib.rs  metrics.rs  tests.rs
crates/pont-crypto-derive/: Cargo.toml
crates/pont-crypto-derive/src/: lib.rs  unions.rs
crates/pont-faucet/: Cargo.toml  README.md
crates/pont-faucet-cli/: Cargo.toml
crates/pont-faucet-cli/src/: main.rs
crates/pont-faucet/src/: lib.rs  main.rs  mint.rs
crates/pont-genesis/: Cargo.toml
crates/pont-genesis/src/: builder.rs  config.rs  keys.rs  lib.rs  mainnet.rs  test_utils.rs
crates/pont-infallible/: Cargo.toml
crates/pont-infallible/src/: math.rs  rwlock.rs
crates/pont-keygen/: Cargo.toml
mempool/: Cargo.toml  README.md
mempool/src/: counters.rs  logging.rs
network/: Cargo.toml  README.md
network/builder/: Cargo.toml
network/discovery/: Cargo.toml
network/memsocket/: Cargo.toml
network/netcore/: Cargo.toml
network/src/: counters.rs  fuzzing.rs  logging.rs
pont-node/: Cargo.toml
pont-node/src/: lib.rs  log_build_information.rs  main.rs
sdk/: Cargo.toml  README.md  publishing.md
sdk/examples/: transfer-coin.rs
sdk/src/: coin_client.rs  lib.rs  transaction_builder.rs  types.rs
types/: Cargo.toml
types/src/: access_path.rs  account_address.rs  account_state.rs  aggregate_signature.rs  block_info.rs  block_metadata.rs  chain_id.rs  contract_event.rs  epoch_change.rs  ledger_info.rs  proptest_types.rs  trusted_state.rs  utility_coin.rs  validator_config.rs  validator_info.rs  validator_signer.rs  validator_verifier.rs  waypoint.rs  write_set.rs
vm-validator/: Cargo.toml
vm-validator/src/: vm_validator.rs
(+1666 files in other folders)
