[workspace]
resolver = "2"

members = [
    "api",
    "api/openapi-spec-generator",
    "api/test-context",
    "api/types",
    "pont-move/pont-aggregator",
    "pont-move/pont-gas",
    "pont-move/pont-resource-viewer",
    "pont-move/pont-sdk-builder",
    "pont-move/pont-transaction-benchmarks",
    "pont-move/pont-transactional-test-harness",
    "pont-move/pont-validator-interface",
    "pont-move/pont-vm",
    "pont-move/e2e-move-tests",
    "pont-move/e2e-tests",
    "pont-move/e2e-testsuite",
    "pont-move/framework",
    "pont-move/framework/artifacts-test",
    "pont-move/framework/cached-packages",
    "pont-move/gas-algebra-ext",
    "pont-move/move-examples",
    "pont-move/mvhashmap",
    "pont-move/package-builder",
    "pont-move/parallel-executor",
    "pont-move/vm-genesis",
    "pont-move/writeset-transaction-generator",
    "pont-node",
    "config",
    "config/global-constants",
    "consensus",
    "consensus/consensus-types",
    "consensus/safety-rules",
    "crates/pont",
    "crates/pont-bitvec",
    "crates/pont-build-info",
    "crates/pont-compression",
    "crates/pont-crypto",
    "crates/pont-crypto-derive",
    "crates/pont-faucet",
    "crates/pont-faucet-cli",
    "crates/pont-genesis",
    "crates/pont-id-generator",
    "crates/pont-infallible",
    "crates/pont-keygen",
    "crates/pont-load-generator",
    "crates/pont-log-derive",
    "crates/pont-logger",
    "crates/pont-metrics-core",
    "crates/pont-network-checker",
    "crates/pont-openapi",
    "crates/pont-proptest-helpers",
    "crates/pont-rate-limiter",
    "crates/pont-rest-client",
    "crates/pont-retrier",
    "crates/pont-rosetta",
    "crates/pont-rosetta-cli",
    "crates/pont-telemetry",
    "crates/pont-telemetry-service",
    "crates/pont-temppath",
    "crates/pont-time-service",
    "crates/pont-warp-webserver",
    "crates/bounded-executor",
    "crates/channel",
    "crates/crash-handler",
    "crates/fallible",
    "crates/indexer",
    "crates/inspection-service",
    "crates/node-resource-metrics",
    "crates/num-variants",
    "crates/proxy",
    "crates/short-hex-str",
    "crates/transaction-emitter",
    "crates/transaction-emitter-lib",
    "ecosystem/node-checker",
    "ecosystem/node-checker/fn-check-client",
    "ecosystem/sf-indexer/firehose-stream",
    "execution/db-bootstrapper",
    "execution/executor",
    "execution/executor-benchmark",
    "execution/executor-test-helpers",
    "execution/executor-types",
    "mempool",
    "network",
    "network/builder",
    "network/discovery",
    "network/memsocket",
    "network/netcore",
    "network/peer-monitoring-service/client",
    "network/peer-monitoring-service/server",
    "network/peer-monitoring-service/types",
    "sdk",
    "secure/net",
    "secure/storage",
    "secure/storage/github",
    "secure/storage/vault",
    "state-sync/pont-data-client",
    "state-sync/inter-component/consensus-notifications",
    "state-sync/inter-component/event-notifications",
    "state-sync/inter-component/mempool-notifications",
    "state-sync/state-sync-v2/data-streaming-service",
    "state-sync/state-sync-v2/state-sync-driver",
    "state-sync/storage-service/client",
    "state-sync/storage-service/server",
    "state-sync/storage-service/types",
    "storage/accumulator",
    "storage/pontdb",
    "storage/backup/backup-cli",
    "storage/backup/backup-service",
    "storage/indexer",
    "storage/jellyfish-merkle",
    "storage/rocksdb-options",
    "storage/schemadb",
    "storage/scratchpad",
    "storage/state-view",
    "storage/storage-interface",
    "testsuite/pont-fuzzer",
    "testsuite/pont-fuzzer/fuzz",
    "testsuite/dos/http_test",
    "testsuite/dos/listener",
    "testsuite/dos/sender",
    "testsuite/forge",
    "testsuite/forge-cli",
    "testsuite/generate-format",
    "testsuite/smoke-test",
    "testsuite/testcases",
    "types",
    "vm-validator",
]

exclude = ["crates/pont-protos", "ecosystem/sf-indexer"]

# NOTE: default-members is the complete list of binaries that form the "production Pont codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "pont-node",
    "consensus/safety-rules",
    "crates/pont",
    "crates/pont-faucet",
    "crates/pont-keygen",
    "crates/pont-rate-limiter",
    "crates/pont-rosetta",
    "crates/transaction-emitter",
    "pont-move/framework",
    "execution/db-bootstrapper",
    "storage/backup/backup-cli",
    "ecosystem/node-checker",
]

[workspace.package]
rust-version = "1.64"

[workspace.dependencies]
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-cli = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-compiler ={ git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-core-types = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["address32"] }
move-docgen = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-ir-compiler = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-model = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-package = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-prover = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-stackless-bytecode = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-prover-test-utils = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-resource-viewer = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-stackless-bytecode-interpreter = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-symbol-pool = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-transactional-test-runner = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["table-extension"] }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["lazy_natives"] }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
read-write-set = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "64a03b1d5bdc3751b95d89c675e63f1ca205e753" }
# END MOVE DEPENDENCIES

[profile.release]
debug = true
overflow-checks = true

[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = true
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true

# This is a temporary workaround to avoid multiple library
# definitions for LZ4 (caused by rust-rocksdb).
# This will be removed once our pull requests land.
# https://github.com/rust-rocksdb/rust-rocksdb/issues/666
[patch.crates-io]
rocksdb = { git = 'https://github.com/aptos-labs/rust-rocksdb' }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
