[package]
name = "pont-api"
version = "0.2.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont REST API"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
bytes = "1.1.0"
fail = "0.5.0"
futures = "0.3.21"
hex = "0.4.3"
hyper = "0.14.18"
itertools = "0.10.3"
mime = "0.3.16"
once_cell = "1.10.0"
paste = "1.0.7"
poem = { version = "1.3.40", features = ["anyhow", "rustls"] }
poem-openapi = { version = "2.0.10", features = ["url"] }
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tokio = { version = "1.21.0", features = ["full"] }
url = "2.2.2"

pont-api-types = { path = "./types", package = "pont-api-types" }
pont-build-info = { path = "../crates/pont-build-info" }
pont-config = { path = "../config" }
pont-crypto = { path = "../crates/pont-crypto" }
pont-gas = { path = "../pont-move/pont-gas" }
pont-logger = { path = "../crates/pont-logger" }
pont-mempool = { path = "../mempool" }
pont-metrics-core = { path = "../crates/pont-metrics-core" }
pont-state-view = { path = "../storage/state-view" }
pont-types = { path = "../types" }
pont-vm = { path = "../pont-move/pont-vm" }

storage-interface = { path = "../storage/storage-interface" }

move-core-types = { workspace = true }

[dev-dependencies]
pont-api-test-context = { path = "./test-context", package = "pont-api-test-context" }
pont-gas = { path = "../pont-move/pont-gas", features = ["testing"] }
pont-proptest-helpers = { path = "../crates/pont-proptest-helpers" }
pont-sdk = { path = "../sdk" }
percent-encoding = "2.1.0"
proptest = { version = "1.0.0", default-features = true }
rand = "0.7.3"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"], default_features = false }
warp = { version = "0.3.2", features = ["default"] }

move-package = { workspace = true }

[features]
failpoints = ["fail/failpoints"]
