[package]
name = "pont-config"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont config"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
get_if_addrs = { version = "0.5.3", default-features = false }
mirai-annotations = "1.12.0"
poem-openapi = { version = "2.0.10", features = ["url"] }
rand = "0.7.3"
serde = { version = "1.0.137", features = ["rc"], default-features = false }
serde_yaml = "0.8.24"
thiserror = "1.0.31"

pont-crypto = { path = "../crates/pont-crypto" }
pont-crypto-derive = { path = "../crates/pont-crypto-derive" }
pont-global-constants = { path = "./global-constants" }
pont-logger = { path = "../crates/pont-logger" }
pont-secure-storage = { path = "../secure/storage" }
pont-temppath = { path = "../crates/pont-temppath" }
pont-types = { path = "../types" }

short-hex-str = { path = "../crates/short-hex-str" }

[dev-dependencies]
pont-crypto = { path = "../crates/pont-crypto", features = ["fuzzing"] }

[features]
default = []
fuzzing = ["pont-crypto/fuzzing", "pont-types/fuzzing"]
testing = []
