[package]
name = "consensus"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont consensus"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
byteorder = { version = "1.4.3" }
bytes = "1.1.0"
fail = "0.5.0"
# Previously: Pinning futures to 0.3.21, since release v0.3.23 is causing the network_tests to fail because messages are not received in the channel.
# Now: Some futures crates were using 0.3.23 as well, which is not a good idea. 0.3.23 has a known issues, so moving to 0.3.24.
futures = "= 0.3.24"
futures-channel = "= 0.3.24"
itertools = { version = "0.10.3", default-features = false }
mirai-annotations = { version = "1.12.0", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
once_cell = "1.10.0"
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.21.0", features = ["full"] }

pont-bitvec = { path = "../crates/pont-bitvec" }
pont-config = { path = "../config" }
pont-crypto = { path = "../crates/pont-crypto" }
pont-infallible = { path = "../crates/pont-infallible" }
pont-logger = { path = "../crates/pont-logger" }
pont-mempool = { path = "../mempool" }
pont-metrics-core = { path = "../crates/pont-metrics-core" }
pont-secure-storage = { path = "../secure/storage" }
pont-temppath = { path = "../crates/pont-temppath" }
pont-types = { path = "../types" }
pont-vm = { path = "../pont-move/pont-vm" }

channel = { path = "../crates/channel" }
consensus-notifications = { path = "../state-sync/inter-component/consensus-notifications" }
consensus-types = { path = "consensus-types", default-features = false }
event-notifications = { path = "../state-sync/inter-component/event-notifications" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
fallible = { path = "../crates/fallible" }
network = { path = "../network" }
safety-rules = { path = "safety-rules" }
schemadb = { path = "../storage/schemadb" }
short-hex-str = { path = "../crates/short-hex-str" }
storage-interface = { path = "../storage/storage-interface" }

[dev-dependencies]
claims = "0.7"
proptest = "1.0.0"
tempfile = "3.3.0"

pont-config = { path = "../config", features = ["fuzzing"] }
pont-keygen = { path = "../crates/pont-keygen" }
pont-mempool = { path = "../mempool", features = ["fuzzing"] }
consensus-types = { path = "consensus-types", default-features = false, features = ["fuzzing"] }
executor-test-helpers = { path = "../execution/executor-test-helpers" }
move-core-types = { workspace = true }
network = { path = "../network", features = ["fuzzing"] }
safety-rules = { path = "safety-rules", features = ["testing"] }
vm-validator = { path = "../vm-validator" }

[features]
default = []
fuzzing = ["consensus-types/fuzzing", "pont-config/fuzzing", "pont-crypto/fuzzing", "pont-mempool/fuzzing", "pont-types/fuzzing", "safety-rules/testing"]
failpoints = ["fail/failpoints"]
