[package]
name = "pont-mempool"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont mempool for consuming incoming transactions"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
fail = "0.5.0"
futures = "0.3.21"
itertools = "0.10.0"
once_cell = "1.10.0"
proptest = { version = "1.0.0", optional = true }
rand = "0.7.3"
rayon = "1.5.2"
serde = { version = "1.0.137", default-features = false }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.8"

pont-config = { path = "../config" }
pont-crypto = { path = "../crates/pont-crypto" }
pont-infallible = { path = "../crates/pont-infallible" }
pont-logger = { path = "../crates/pont-logger" }
pont-metrics-core = { path = "../crates/pont-metrics-core" }
pont-proptest-helpers = { path = "../crates/pont-proptest-helpers", optional = true }
pont-types = { path = "../types" }

bounded-executor = { path = "../crates/bounded-executor" }
channel = { path = "../crates/channel" }
consensus-types = { path = "../consensus/consensus-types" }
event-notifications = { path = "../state-sync/inter-component/event-notifications" }
mempool-notifications = { path = "../state-sync/inter-component/mempool-notifications" }
netcore = { path = "../network/netcore" }
network = { path = "../network" }
short-hex-str = { path = "../crates/short-hex-str" }
storage-interface = { path = "../storage/storage-interface" }
vm-validator = { path = "../vm-validator" }

[dev-dependencies]
enum_dispatch = "0.3.8"
proptest = "1.0.0"

pont-compression = { path = "../crates/pont-compression" }
pont-config = { path = "../config", features = ["fuzzing"] }
pont-id-generator = { path = "../crates/pont-id-generator" }
network = { path = "../network", features = ["fuzzing"] }
storage-interface = { path = "../storage/storage-interface", features = ["fuzzing"] }

[features]
default = []
failpoints = ["fail/failpoints", "vm-validator/failpoints"]
fuzzing = ["proptest", "pont-types/fuzzing", "storage-interface/fuzzing", "pont-config/fuzzing"]
