[package]
name = "network"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont networking stack"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
bytes = { version = "1.0.1", features = ["serde"] }
futures = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
itertools = "0.10.1"
once_cell = "1.10.0"
pin-project = "1.0.10"
proptest = { version = "1.0.0", default-features = true, optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = { version = "0.7.3", features = ["small_rng"] }
serde = { version = "1.0.137", default-features = false }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.21.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }

pont-compression = { path = "../crates/pont-compression" }
pont-config = { path = "../config" }
pont-crypto = { path = "../crates/pont-crypto" }
pont-crypto-derive = { path = "../crates/pont-crypto-derive" }
pont-id-generator = { path = "../crates/pont-id-generator" }
pont-infallible = { path = "../crates/pont-infallible" }
pont-logger = { path = "../crates/pont-logger" }
pont-metrics-core = { path = "../crates/pont-metrics-core" }
pont-proptest-helpers = { path = "../crates/pont-proptest-helpers", optional = true }
pont-rate-limiter = { path = "../crates/pont-rate-limiter" }
pont-time-service = { path = "../crates/pont-time-service", features = ["async"] }
pont-types = { path = "../types" }

bitvec = { path = "../crates/pont-bitvec", package = "pont-bitvec" }
channel = { path = "../crates/channel" }
memsocket = { path = "./memsocket", optional = true }
netcore = { path = "./netcore" }
num-variants = { path = "../crates/num-variants" }
short-hex-str = { path = "../crates/short-hex-str" }

[dev-dependencies]
maplit = "1.0.2"
proptest = { version = "1.0.0", default-features = true }
proptest-derive = { version = "0.3.0" }
rand_core = "0.5.1"

pont-config = { path = "../config", features = ["testing"] }
pont-proptest-helpers = { path = "../crates/pont-proptest-helpers" }
pont-time-service = { path = "../crates/pont-time-service", features = ["async", "testing"] }
pont-types = { path = "../types", features = ["fuzzing"] }
bitvec = { path = "../crates/pont-bitvec", package = "pont-bitvec", features = ["fuzzing"] }
memsocket = { path = "./memsocket" }
netcore = { path = "./netcore", features = ["testing"] }

[features]
default = []
fuzzing = ["bitvec/fuzzing", "pont-config/fuzzing", "pont-crypto/fuzzing", "pont-types/fuzzing", "pont-proptest-helpers", "pont-time-service/testing", "pont-types/fuzzing", "memsocket/testing", "netcore/fuzzing", "proptest", "proptest-derive"]
testing = ["pont-config/testing", "pont-time-service/testing", "memsocket/testing", "netcore/testing"]
