[package]
name = "pont-sdk"
version = "0.0.3"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "The Official Pont SDK"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
pont-crypto = { path = "../crates/pont-crypto" }
pont-global-constants = { path = "../config/global-constants" }
pont-rest-client = { path = "../crates/pont-rest-client" }
pont-types = { path = "../types" }
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
cached-packages = { path = "../pont-move/framework/cached-packages" }
move-deps = { path = "../pont-move/move-deps", features = ["address32"] }
rand_core = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }

# Used by the examples.
[dev-dependencies]
once_cell = "1.13.0"
rand = "0.7.3"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
