[package]
name = "pont-types"
version = "0.0.3"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont core types"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
hex = "0.4.3"
itertools = { version = "0.10.3" }
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
thiserror = "1.0.31"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }

pont-bitvec = { path = "../crates/pont-bitvec" }
pont-crypto = { path = "../crates/pont-crypto" }
pont-crypto-derive = { path = "../crates/pont-crypto-derive" }
move-core-types = { workspace = true }

move-table-extension = { workspace = true }

[dev-dependencies]
claims = "0.7"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
serde_json = "1.0.81"

pont-crypto = { path = "../crates/pont-crypto", features = ["fuzzing"] }

move-core-types = { workspace = true, features = ["fuzzing"] }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "pont-crypto/fuzzing", "move-core-types/fuzzing"]
