[package]
name = "vm-validator"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont vm validator"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
fail = "0.5.0"

pont-gas = { path = "../pont-move/pont-gas" }
pont-state-view = { path = "../storage/state-view" }
pont-types = { path = "../types" }
pont-vm = { path = "../pont-move/pont-vm" }
scratchpad = { path = "../storage/scratchpad" }
storage-interface = { path = "../storage/storage-interface" }

[dev-dependencies]
rand = "0.7.3"

pont-crypto = { path = "../crates/pont-crypto", features = ["fuzzing"] }
pont-temppath = { path = "../crates/pont-temppath" }
pont-types = { path = "../types", features = ["fuzzing"] }
pont-vm = { path = "../pont-move/pont-vm" }
pontdb = { path = "../storage/pontdb", features = ["fuzzing"] }
cached-packages = { path = "../pont-move/framework/cached-packages" }
executor-test-helpers = { path = "../execution/executor-test-helpers" }
move-deps = { path = "../pont-move/move-deps", features = ["address32"] }
vm-genesis = { path = "../pont-move/vm-genesis" }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["pont-types/fuzzing", "pont-crypto/fuzzing", "pontdb/fuzzing"]
