[package]
name = "pont-api-types"
version = "0.0.1"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont API Types"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
hex = "0.4.3"
indoc = "1.0.6"
poem = "1.3.40"
poem-openapi = "2.0.10"
serde = { version = "1.0.137", default-features = false }
serde_json = "1.0.81"

pont-config = { path = "../../config" }
pont-crypto = { path = "../../crates/pont-crypto" }
pont-openapi = { path = "../../crates/pont-openapi" }
pont-types = { path = "../../types" }
pont-vm = { path = "../../pont-move/pont-vm" }

storage-interface = { path = "../../storage/storage-interface" }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
