[package]
name = "pont-global-constants"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont's global constant crate: the source of truth for constant definitions that span multiple crates"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[features]
default = []
testing = []
