[package]
name = "consensus-types"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont consensus types"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
futures = "0.3.12"
itertools = "0.10.3"
mirai-annotations = { version = "1.12.0", default-features = false }
proptest = { version = "1.0.0", optional = true }
rayon = "1.5.2"
serde = { version = "1.0.137", default-features = false }

pont-bitvec = { path = "../../crates/pont-bitvec" }
pont-crypto = { path = "../../crates/pont-crypto" }
pont-crypto-derive = { path = "../../crates/pont-crypto-derive" }
pont-infallible = { path = "../../crates/pont-infallible" }
pont-types = { path = "../../types" }

executor-types = { path = "../../execution/executor-types" }
short-hex-str = { path = "../../crates/short-hex-str" }

[dev-dependencies]
proptest = "1.0.0"
serde_json = "1.0.81"

pont-types = { path = "../../types", features = ["fuzzing"] }

[features]
default = []
fuzzing = ["proptest", "pont-types/fuzzing", "pont-crypto/fuzzing"]
