[package]
name = "safety-rules"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont safety rules"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
once_cell = "1.10.0"
proptest = { version = "1.0.0", optional = true }
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_json = "1.0.81"
thiserror = "1.0.31"

pont-config = { path = "../../config" }
pont-crypto = { path = "../../crates/pont-crypto" }
pont-global-constants = { path = "../../config/global-constants" }
pont-infallible = { path = "../../crates/pont-infallible" }
pont-logger = { path = "../../crates/pont-logger" }
pont-metrics-core = { path = "../../crates/pont-metrics-core" }
pont-proptest-helpers = { path = "../../crates/pont-proptest-helpers", optional = true }
pont-secure-net = { path = "../../secure/net" }
pont-secure-storage = { path = "../../secure/storage" }
pont-temppath = { path = "../../crates/pont-temppath" }
pont-types = { path = "../../types" }
pont-vault-client = { path = "../../secure/storage/vault" }
consensus-types = { path = "../consensus-types" }

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"
rusty-fork = "0.3.0"
tempfile = "3.3.0"

pont-config = { path = "../../config", features = ["fuzzing"] }
pont-proptest-helpers = { path = "../../crates/pont-proptest-helpers" }
pont-secure-storage = { path = "../../secure/storage", features = ["testing"] }
consensus-types = { path = "../consensus-types", features = ["fuzzing"] }

[[bench]]
name = "safety_rules"
harness = false
required-features = ["testing"]

[features]
default = []
fuzzing = ["consensus-types/fuzzing", "pont-config/fuzzing", "proptest", "pont-proptest-helpers"]
testing = ["pont-secure-storage/testing"]
