[package]
name = "bounded-executor"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Executor bounded by number of concurrent tasks"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
futures = "0.3.21"
tokio = { version = "1.21.0", features = ["sync", "rt"] }

[dev-dependencies]
tokio = { version = "1.21.0", features = ["full"] }
