[package]
name = "channel"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "An implementation of a channel with configurable QoS"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"

pont-infallible = { path = "../../crates/pont-infallible" }
pont-metrics-core = { path = "../../crates/pont-metrics-core" }

[dev-dependencies]
tokio = { version = "1.21.0", features = ["full"] }

pont-types = { path = "../../types" }
