[package]
name = "crash-handler"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "Pont crash handler"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
backtrace = "0.3.58"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"

pont-logger = { path = "../../crates/pont-logger" }

