[package]
name = "pont-indexer"
version = "0.0.1"
description = "Pont Indexer"
authors = ["Pont Labs <opensource@pontlabs.com>"]
edition = "2021"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.57"
pont-api = { path = "../../api", package = "pont-api" }
pont-api-types = { path = "../../api/types" }
pont-bitvec = { path = "../pont-bitvec" }
pont-config = { path = "../../config" }
async-trait = "0.1.53"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = [
  "clock",
  "serde",
] }
clap = { version = "3.1.17", features = ["env", "suggestions"] }
diesel = { version = "2.0.0", features = [
  "chrono",
  "postgres",
  "r2d2",
  "numeric",
  "serde_json",
] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
field_count = "0.1.1"
futures = "0.3.21"
hex = "0.4.3"
once_cell = "1.10.0"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json", "cookies"] }
reqwest-middleware = { version = "0.1.6" }
reqwest-retry = { version = "0.1.5" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.9.3"
tokio = { version = "1.21.0", features = ["full", "time", "rt-multi-thread"] }
url = "2.2.2"

pont-logger = { path = "../pont-logger" }
pont-mempool = { path = "../../mempool" }
pont-metrics-core = { path = "../pont-metrics-core" }
pont-types = { path = "../../types" }
pont-vm = { path = "../../pont-move/pont-vm" }
storage-interface = { path = "../../storage/storage-interface" }

[dev-dependencies]
pont-api-test-context = { path = "../../api/test-context" }
