[package]
name = "inspection-service"
version = "0.1.0"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "The Node Inspection Service"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"
hyper = { version = "0.14.18", features = ["full"] }
once_cell = "1.10.0"
prometheus = { version = "0.13.0", default-features = false }
reqwest = { version = "0.11.10", features = ["blocking", "json"], default_features = false }
serde_json = "1.0.81"
sysinfo = "0.24.2"
tokio = { version = "1.21.0", features = ["full"] }

pont-build-info = { path = "../../crates/pont-build-info" }
pont-config = { path = "../../config" }
pont-infallible = { path = "../../crates/pont-infallible" }
pont-logger = { path = "../../crates/pont-logger" }
pont-metrics-core = { path = "../pont-metrics-core" }
pont-telemetry = { path = "../pont-telemetry" }

[dev-dependencies]
assert_approx_eq = "1.1.0"
rusty-fork = "0.3.0"
