[package]
name = "node-resource-metrics"
version = "0.1.0"
edition = "2021"
authors = ["Pont Labs <opensource@pontlabs.com>"]
description = "System resource metrics collector"
repository = "https://github.com/aptos-labs/pont-core"
homepage = "https://pontlabs.com"
license = "Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pont-infallible = { path = "../../crates/pont-infallible" }
pont-logger = { path = "../../crates/pont-logger" }
pont-metrics-core = { path = "../../crates/pont-metrics-core" }

cfg-if = "1.0.0"
once_cell = "1.10.0"
prometheus = { version = "0.13.0", default-features = false }
sysinfo = "0.24.2"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.14.1"
